--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
         import { getAuth, onAuthStateChanged, GoogleAuthProvider, GithubAuthProvider, OAuthProvider, signInWithPopup, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, updateProfile } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-        import { getFirestore, doc, setDoc, getDoc, collection, getDocs, updateDoc, arrayUnion } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { getFirestore, doc, setDoc, getDoc, collection, getDocs, addDoc, query, where } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyBrP14baJEyuYYt5xOUt4SeSeUFM3RY2rk",
@@ -285,8 +285,7 @@
             try {
                 await setDoc(doc(db, "users", uid), {
                     uid, name, email,
-                    role: 'student',
-                    appliedInternships: [],
+                    role: 'student'
                 });
             } catch (error) {
                 console.error("Error creating user in Firestore:", error);
@@ -305,21 +304,22 @@
                 querySnapshot.forEach((doc) => {
                     const internship = doc.data();
                     const card = document.createElement('div');
-                    card.className = 'bg-white p-6 rounded-lg shadow-md border flex flex-col';
+                    card.className = 'bg-white p-6 rounded-lg shadow-md border border-gray-200 text-center flex flex-col';
                     card.innerHTML = `
+                        <img src="${internship.logoUrl || 'https://placehold.co/100x100/e0e7ff/4f46e5?text=Logo'}" alt="Internship Logo" class="h-20 w-20 object-contain mx-auto mb-4">
                         <h3 class="text-xl font-bold mb-2">${internship.title}</h3>
                         <p class="text-gray-600 mb-4 flex-grow">${internship.description.substring(0, 100)}...</p>
-                        <button data-id="${doc.id}" class="apply-btn mt-auto w-full bg-indigo-500 text-white font-medium py-2 px-6 rounded-md hover:bg-indigo-600">Apply Now</button>
+                        <button data-id="${doc.id}" class="apply-btn mt-auto w-full bg-indigo-500 text-white font-medium py-2 px-6 rounded-md hover:bg-indigo-600 transition-colors">Apply Now</button>
                     `;
                     internshipListings.appendChild(card);
                 });
             } catch (error) {
                 console.error("Error loading internships: ", error);
-                internshipListings.innerHTML = '<p class="col-span-full text-center text-red-500">Could not load internships.</p>';
+                internshipListings.innerHTML = '<p class="col-span-full text-center text-red-500">Could not load internships. Please try again later.</p>';
             }
         }
         
-        // --- FUNCTION TO HANDLE APPLICATION ---
+        // --- UPDATED: FUNCTION TO HANDLE APPLICATION ---
         async function handleApply(internshipId) {
             const user = auth.currentUser;
             if (!user) {
@@ -331,17 +331,34 @@
             applyButton.disabled = true;
             applyButton.textContent = 'Applying...';
             try {
-                const userDocRef = doc(db, "users", user.uid);
-                await updateDoc(userDocRef, {
-                    appliedInternships: arrayUnion(internshipId)
+                // 1. Check if user already applied
+                const applicationsRef = collection(db, "applications");
+                const q = query(applicationsRef, where("userId", "==", user.uid), where("internshipId", "==", internshipId));
+                const querySnapshot = await getDocs(q);
+
+                if (!querySnapshot.empty) {
+                    showMessage('You have already applied for this internship.', true);
+                    applyButton.textContent = 'Already Applied';
+                    return;
+                }
+
+                // 2. Add new application document
+                await addDoc(applicationsRef, {
+                    userId: user.uid,
+                    internshipId: internshipId,
+                    offerLetterUrl: "",
+                    certificateUrl: "",
+                    status: "applied",
+                    appliedAt: new Date()
                 });
-                showMessage('Successfully applied!');
+
+                showMessage('Successfully applied for the internship!');
                 applyButton.textContent = 'Applied';
                 applyButton.classList.remove('bg-indigo-500', 'hover:bg-indigo-600');
                 applyButton.classList.add('bg-green-500', 'cursor-not-allowed');
             } catch (error) {
-                console.error("Error applying: ", error);
-                showMessage('Application failed.', true);
+                console.error("Error applying for internship: ", error);
+                showMessage('There was an error submitting your application.', true);
                 applyButton.disabled = false;
                 applyButton.textContent = 'Apply Now';
             }
@@ -359,7 +376,6 @@
                 hideModal();
                 showMessage(`Welcome, ${user.displayName}!`);
             } catch (error) {
-                console.error("Social login error:", error);
                 showMessage(`Error: ${error.message}`, true);
             }
         }
@@ -460,7 +476,6 @@
         googleLoginBtn.addEventListener('click', () => handleSocialLogin(new GoogleAuthProvider()));
         githubLoginBtn.addEventListener('click', () => handleSocialLogin(new GithubAuthProvider()));
         linkedinLoginBtn.addEventListener('click', () => {
-            // Note: LinkedIn requires additional setup in the Firebase Console
             const provider = new OAuthProvider('linkedin.com');
             handleSocialLogin(provider);
         });
